--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,10 @@
 /* TODO Add site wide styles */
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: sans-serif;
+}
