--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -7,7 +7,9 @@
   z-index: 100;
   width: 800px;
   height: 300px;
-  border: 5px solid black;
+  backdrop-filter: blur(100px);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    padding: 20px;
 }
 
 .details-list{
