PostDetails Modal complete

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -2,8 +2,8 @@
 #modal {
   position: fixed;
   top: 0;
-  right: 0;
-  left: 0;
+  right: 50%;
+  left: 50%;
   bottom: 0;
   display: flex;
   justify-content: center;
@@ -16,7 +16,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 #modal-content {
