--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -1,15 +1,15 @@
 .details-container{
-  position: fixed;
-  top: 100px;
+  /* position: fixed; */
+  /* top: 100px; */
   /* margin: 0 auto; */
   /* left: 50%; */
-  background-color: white;
-  z-index: 100;
+  /* background-color: white; */
+  /* z-index: 100; */
   width: 800px;
-  height: 300px;
-  backdrop-filter: blur(100px);
+  height: 500px;
+  /* backdrop-filter: blur(100px); */
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    padding: 20px;
+  padding: 20px;
 }
 
 .details-list{
