--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 .nav-list{
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
   height: 80px;
   border-bottom: 1px rgba(211, 211, 211, 0.422) solid;
