extra styles added to CreateForm

--- a/frontend/src/components/CreatePostForm/CreatePostForm.css
+++ b/frontend/src/components/CreatePostForm/CreatePostForm.css
@@ -19,3 +19,8 @@
 .create-form-errors{
   color: red;
 }
+.create-post-btn{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
