created post details modal

--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -6,17 +6,26 @@
   /* background-color: white; */
   /* z-index: 100; */
   width: 800px;
-  height: 500px;
+  /* height: 900px; */
+  height: inherit;
+  /* min-height: min-content; */
   /* backdrop-filter: blur(100px); */
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   padding: 20px;
+  /* overflow-y: scroll; */
+
+
 }
 
 .details-list{
 
+  overflow-y: auto;
+
 }
 .details-list li{
   list-style: none;
+  overflow-y: auto;
+
 }
 .details-image{
   width: 72px;
