--- a/frontend/src/components/CreatePostForm/CreatePostForm.css
+++ b/frontend/src/components/CreatePostForm/CreatePostForm.css
@@ -4,20 +4,54 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+
+  height: 500px;
+
+
+
 }
 .create-input-div{
+  /* background-color: black; */
+}
+.create-input-div label{
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+
+}
+.create-input-div label input{
+  padding: 5px;
+  border-radius: 5px;
+}
+.create-input-container{
   margin: 20px;
   padding: 20px;
-}
-.create-input-div input{
-
+  display: flex;
+  flex-direction: column;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 .submit-create-btn{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  height: 20px;
+  margin-bottom: 10px;
 
 }
+.submit-create-btn:hover{
+  background-image: linear-gradient(to right, white, #2ebf91eb);
+  border-radius: 5px;
 
+}
+.create-post-header{
+  margin-top: 20px;
+}
 .create-form-errors{
   color: red;
+  margin-top: 30px;
 }
 .create-post-btn{
   background-color: transparent;
