--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -26,3 +26,28 @@
   border: none;
   cursor: pointer;
 }
+.drop-down-content{
+  /* position: absolute; */
+}
+.profile-container{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.profile-dropdown{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1000;
+  width: 110px;
+  height: 67px;
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  justify-content: space-around;
+}
+.profile-dropdown li{
+  list-style-type: none;
+  text-align: center;
+}
