--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -36,3 +36,14 @@
   height: 40px;
   width: 40px;
 }
+
+.delete-post-btn{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.delete-post-btn:hover{
+  background-image: linear-gradient(to right, white, #2ebf91eb);
+
+  border-radius: 5px;
+}
