--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -54,6 +54,18 @@
 .home-link{
   color: black;
 }
+.home-link p{
+  color: black;
+  font-size: 16px;
+  /* padding-bottom: 1px; */
+}
 .product-hunt-logo{
   width: 40px;
+}
+
+.demo-user-login-btn{
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+
 }
