--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -12,14 +12,17 @@
   /* backdrop-filter: blur(100px); */
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   padding: 20px;
+
   /* overflow-y: scroll; */
 
+  background-color: #f8f8ff;
 
 }
 
 .details-list{
 
   overflow-y: auto;
+
 
 }
 .details-list li{
