--- a/frontend/src/components/PostsComments/PostsComments.css
+++ b/frontend/src/components/PostsComments/PostsComments.css
@@ -8,8 +8,10 @@
   margin-left: 10px;
 }
 .profile-img{
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
 }
 
 .comment-content{
