--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
 }
 
 body{
-  font-family: 🇲🇸 ;
+  /* font-family: 🇲🇸 ; */
+  font-family: 'Montserrat', sans-serif;
   background-color: #f8f8ff;
 }
