--- a/frontend/src/components/PostDetails/PostDetails.css
+++ b/frontend/src/components/PostDetails/PostDetails.css
@@ -10,9 +10,9 @@
   height: inherit;
   /* min-height: min-content; */
   /* backdrop-filter: blur(100px); */
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
   padding: 20px;
-
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   /* overflow-y: scroll; */
 
   background-color: #f8f8ff;
