--- a/frontend/src/components/CreatePostForm/CreatePostForm.css
+++ b/frontend/src/components/CreatePostForm/CreatePostForm.css
@@ -6,7 +6,9 @@
   text-align: center;
 
   height: 500px;
-
+  width: 500px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  background-color: #f8f8ff;
 
 
 }
@@ -32,6 +34,7 @@
   /* display: flex;
   align-items: center;
   justify-content: center; */
+
 }
 .submit-create-btn{
   background-color: transparent;
@@ -44,7 +47,6 @@
 .submit-create-btn:hover{
   background-image: linear-gradient(to right, white, #2ebf91eb);
   border-radius: 5px;
-
 }
 .create-post-header{
   margin-top: 20px;
